# rag_chatbot_get_started

./: .gitignore  common_input_types.py  gradio_demo.py  main.py  pyproject.toml  similarity_search_chromadb.py  simple_llm.py  test_embed.py
bot_icebreaker/: config.py  mock_data.json  requirements.txt
bot_icebreaker/modules/: __init__.py  data_extraction.py  data_processing.py  llm_interface.py  query_engine.py
notebook/: Summarize Private Documents Using RAG - OpenRouter.ipynb
simple_rag/: download_model.py  qabot.py
